--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>relcount</artifactId>
-    <version>2.2.6.35.10-SNAPSHOT</version>
+    <version>2.3.0.35.9-SNAPSHOT</version>
 
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
         <artifactId>module-parent</artifactId>
-        <version>2.2.6.35</version>
+        <version>2.3.0.35</version>
     </parent>
 
     <name>GraphAware Relationship Count Module</name>
@@ -75,6 +75,11 @@
         <dependency>
             <groupId>com.graphaware.neo4j</groupId>
             <artifactId>runtime</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.graphaware.neo4j</groupId>
+            <artifactId>server</artifactId>
         </dependency>
 
     </dependencies>
