--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>relcount</artifactId>
-    <version>2.3.1.37.9-SNAPSHOT</version>
+    <version>2.3.1.37.9</version>
 
     <parent>
         <groupId>com.graphaware.neo4j</groupId>
@@ -42,7 +42,7 @@
         <connection>scm:git:git@github.com:graphaware/neo4j-relcount.git</connection>
         <developerConnection>scm:git:git@github.com:graphaware/neo4j-relcount.git</developerConnection>
         <url>git@github.com:graphaware/neo4j-relcount.git</url>
-      <tag>HEAD</tag>
+      <tag>relcount-2.3.1.37.9</tag>
   </scm>
 
     <developers>
